<resources>
    <string name="app_name">CampSign</string>
    <string name="sign_id_text">아이디</string>
    <string name="sign_pw_text">비밀번호</string>
    <string name="sign_name_text">이름</string>
    <string name="sign_id_text_indic">아이디를 입력하세요</string>
    <string name="sign_pw_text_indic">비밀번호를 입력하세요</string>
    <string name="sign_name_text_indic">이름을 입력하세요</string>
    <string name="sign_in_button_text">로그인</string>
    <string name="sign_up_button_text">회원가입</string>
    <string name="exit_button_text">종료</string>
    <string name="name_invalidation_indic_text">이름을 두글자 이상 입력해주세요</string>
    <string name="id_invalidation_indic_text">이메일을 입력하세요</string>
    <string name="pw_invalidation_indic_text">
        비밀번호는 특수문자, 대문자, 문자, 숫자가 1개 이상씩 총 8글자 이상으로 설정해주세요
    </string>

    <string name="name_edit_text_tag">nameTag</string>
    <string name="id_edit_text_tag">idTag</string>
    <string name="pw_edit_text_tag">pwTag</string>
</resources>