<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/topGuideLine"
        android:src="@drawable/mango"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topGuideLine"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_name_text"
            style="@style/InfoTextStyle"/>
        <EditText
            android:id="@+id/signUpNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/sign_name_text_indic"
            style="@style/InfoTextIndicStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_id_text"
            style="@style/InfoTextStyle"/>
        <EditText
            android:id="@+id/signUpIdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/sign_id_text_indic"
            style="@style/InfoTextIndicStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_pw_text"
            style="@style/InfoTextStyle"/>
        <EditText
            android:id="@+id/signUpPwEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/sign_pw_text_indic"
            android:inputType="textPassword"
            style="@style/InfoTextIndicStyle"/>
        <Button
            android:id="@+id/signUpSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button_text"
            style="@style/ButtonTextStyle"
            android:layout_marginTop="32dp"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>